--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ local.properties
 .signing/
 
 # User-specific configurations
+.idea/gradle.xml
 .idea/libraries/
 .idea/workspace.xml
 .idea/tasks.xml
